<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutOne"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_tq_6"
    android:gravity="center"
    android:orientation="horizontal" >

    <RelativeLayout
        android:id="@+id/layoutBottomSmall"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <!-- 电话 -->

        <RelativeLayout
            android:id="@+id/layoutPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/main_item_margin_right" >

            <TextView
                android:id="@+id/textPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_item_title_margin_top"
                android:text="@string/title_phone"
                android:textColor="@color/main_item_title_color"
                android:textSize="@dimen/main_item_title_size" />

            <ImageView
                android:layout_width="@dimen/pager_one_image_length"
                android:layout_height="@dimen/pager_one_image_length"
                android:layout_below="@id/textPhone"
                android:layout_marginTop="@dimen/pager_one_image_margin_top"
                android:contentDescription="@null"
                android:src="@drawable/phone_tq_6" />

            <RelativeLayout
                android:layout_width="@dimen/pager_one_image_length"
                android:layout_height="@dimen/pager_one_image_length"
                android:layout_below="@id/textPhone"
                android:layout_marginTop="@dimen/pager_one_image_margin_top"
                android:background="?android:attr/selectableItemBackground" />
        </RelativeLayout>

        <!-- 电子狗 -->

        <RelativeLayout
            android:id="@+id/layoutEDog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/main_item_margin_right" >

            <TextView
                android:id="@+id/textEDog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_item_title_margin_top"
                android:text="@string/title_edog"
                android:textColor="@color/main_item_title_color"
                android:textSize="@dimen/main_item_title_size" />

            <ImageView
                android:layout_width="@dimen/pager_one_image_length"
                android:layout_height="@dimen/pager_one_image_length"
                android:layout_below="@id/textEDog"
                android:layout_marginTop="@dimen/pager_one_image_margin_top"
                android:contentDescription="@null"
                android:src="@drawable/edog_small_tq_6" />

            <RelativeLayout
                android:layout_width="@dimen/pager_one_image_length"
                android:layout_height="@dimen/pager_one_image_length"
                android:layout_below="@id/textEDog"
                android:layout_marginTop="@dimen/pager_one_image_margin_top"
                android:background="?android:attr/selectableItemBackground" />
        </RelativeLayout>

        <!-- FM发射 -->

        <RelativeLayout
            android:id="@+id/layoutFMTransmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutPhone"
            android:layout_marginRight="@dimen/main_item_margin_right" >

            <TextView
                android:id="@+id/textFmTransmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_item_title_margin_top"
                android:text="@string/title_fm_transmit"
                android:textColor="@color/main_item_title_color"
                android:textSize="@dimen/main_item_title_size" />

            <ImageView
                android:layout_width="@dimen/pager_one_image_length"
                android:layout_height="@dimen/pager_one_image_length"
                android:layout_below="@id/textFmTransmit"
                android:layout_marginTop="@dimen/pager_one_image_margin_top"
                android:contentDescription="@null"
                android:src="@drawable/fmtransmit_small_tq_6" />

            <RelativeLayout
                android:layout_width="@dimen/pager_one_image_length"
                android:layout_height="@dimen/pager_one_image_length"
                android:layout_below="@id/textFmTransmit"
                android:layout_marginTop="@dimen/pager_one_image_margin_top"
                android:background="?android:attr/selectableItemBackground" />
        </RelativeLayout>
        <!-- 文件管理 -->

        <RelativeLayout
            android:id="@+id/layoutFileManager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/layoutEDog"
            android:layout_marginRight="@dimen/main_item_margin_right" >

            <TextView
                android:id="@+id/textFileManager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_item_title_margin_top"
                android:text="@string/title_file_manager"
                android:textColor="@color/main_item_title_color"
                android:textSize="@dimen/main_item_title_size" />

            <ImageView
                android:layout_width="@dimen/pager_one_image_length"
                android:layout_height="@dimen/pager_one_image_length"
                android:layout_below="@id/textFileManager"
                android:layout_marginTop="@dimen/pager_one_image_margin_top"
                android:contentDescription="@null"
                android:src="@drawable/filemanager_small_tq_6" />

            <RelativeLayout
                android:layout_width="@dimen/pager_one_image_length"
                android:layout_height="@dimen/pager_one_image_length"
                android:layout_below="@id/textFileManager"
                android:layout_marginTop="@dimen/pager_one_image_margin_top"
                android:background="?android:attr/selectableItemBackground" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutBottomBig"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="@dimen/layout_big_margin_right"
        android:layout_toLeftOf="@id/layoutBottomSmall"
        android:orientation="horizontal" >

        <!-- 行车记录 -->

        <RelativeLayout
            android:id="@+id/layoutRecord"
            android:layout_width="@dimen/main_item_total_width"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/main_item_margin_right"
            android:layout_marginRight="@dimen/main_item_margin_right" >

            <ImageView
                android:layout_width="@dimen/main_item_image_width"
                android:layout_height="@dimen/main_item_image_height"
                android:contentDescription="@null"
                android:src="@drawable/record_tq_6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_item_title_margin_left"
                android:layout_marginTop="@dimen/main_item_title_margin_top"
                android:text="@string/title_record"
                android:textColor="@color/main_item_title_color"
                android:textSize="@dimen/main_item_title_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/main_item_center_point_margin_bottom"
                android:layout_marginLeft="@dimen/main_item_center_point_margin_left"
                android:layout_marginRight="@dimen/main_item_center_point_margin_right"
                android:layout_marginTop="@dimen/main_item_center_point_margin_top"
                android:background="?android:attr/selectableItemBackground" >

                <ImageView
                    android:id="@+id/imageRecordState"
                    android:layout_width="@dimen/record_state_edge_length"
                    android:layout_height="@dimen/record_state_edge_length"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/edog_state_margin_bottom"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@null"
                    android:src="@drawable/state_record_start_tq_6" />

                <TextView
                    android:id="@+id/textRecStateFront"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/record_screen_margin_right"
                    android:layout_marginTop="@dimen/record_front_margin_top"
                    android:text="@string/rec_state_front_off"
                    android:textColor="@color/record_screen_text_color"
                    android:textSize="@dimen/record_screen_text_size" />

                <TextView
                    android:id="@+id/textRecStateBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/record_screen_margin_right"
                    android:layout_marginTop="@dimen/record_back_margin_top"
                    android:text="@string/rec_state_back_off"
                    android:textColor="@color/record_screen_text_color"
                    android:textSize="@dimen/record_screen_text_size" />
            </RelativeLayout>
        </RelativeLayout>

        <!-- 导航 -->

        <RelativeLayout
            android:id="@+id/layoutNavigation"
            android:layout_width="@dimen/main_item_total_width"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/main_item_margin_right" >

            <ImageView
                android:layout_width="@dimen/main_item_image_width"
                android:layout_height="@dimen/main_item_image_height"
                android:contentDescription="@null"
                android:src="@drawable/navigation_tq_6" />

            <TextView
                android:id="@+id/imageNavigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_item_title_margin_left"
                android:layout_marginTop="@dimen/main_item_title_margin_top"
                android:text="@string/title_navigation"
                android:textColor="@color/main_item_title_color"
                android:textSize="@dimen/main_item_title_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/main_item_center_point_margin_bottom"
                android:layout_marginLeft="@dimen/main_item_center_point_margin_left"
                android:layout_marginRight="@dimen/main_item_center_point_margin_right"
                android:layout_marginTop="@dimen/main_item_center_point_margin_top"
                android:background="?android:attr/selectableItemBackground" >
            </RelativeLayout>
        </RelativeLayout>

        <!-- 音乐 -->

        <RelativeLayout
            android:id="@+id/layoutMusic"
            android:layout_width="@dimen/main_item_total_width"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/main_item_margin_right" >

            <ImageView
                android:layout_width="@dimen/main_item_image_width"
                android:layout_height="@dimen/main_item_image_height"
                android:contentDescription="@null"
                android:src="@drawable/music_big_tq_6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_item_title_margin_left"
                android:layout_marginTop="@dimen/main_item_title_margin_top"
                android:text="@string/title_music"
                android:textColor="@color/main_item_title_color"
                android:textSize="@dimen/main_item_title_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/main_item_center_point_margin_bottom"
                android:layout_marginLeft="@dimen/main_item_center_point_margin_left"
                android:layout_marginRight="@dimen/main_item_center_point_margin_right"
                android:layout_marginTop="@dimen/main_item_center_point_margin_top"
                android:background="?android:attr/selectableItemBackground" >
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>